--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node src/app.js",
+    "test": "jest",
+    "dev": "nodemon src/server.js --ignore tests"
   },
   "author": "Vinicius Aquino",
   "license": "ISC",
@@ -16,5 +17,9 @@
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8"
+  },
+  "devDependencies": {
+    "jest": "^28.1.1",
+    "supertest": "^6.2.3"
   }
 }
