--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "test": "jest",
+    "test": "jest --testTimeout=5000",
     "dev": "nodemon src/server.js --ignore tests"
   },
   "author": "Vinicius Aquino",
